LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/Client_Contact_Directory__c.object-meta.xml
<CustomObject>
    <description>This object contains the information of Client Contact record.</description>
    <label>Client Contact Directory</label>
    <nameField>
        <displayFormat>CCD-{0000}</displayFormat>
        <label>Client Contact Directory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contact Directory</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>