LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Alternate_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_ID__c</fullName>
    <label>Alternate Email ID</label>
    <type>Email</type>
</CustomField>