LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/BOD_Flag__c.field-meta.xml
<CustomField>
    <fullName>BOD_Flag__c</fullName>
    <label>BOD Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>