LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <formula>Client_Contact__r.Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>