LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Chamber_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Chamber_Contacts__c</fullName>
    <formula>Client_Contact__r.Chamber_contacts__r.FirstName + &apos; &apos; + Client_Contact__r.Chamber_contacts__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chamber Contacts</label>
    <type>Text</type>
</CustomField>