LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Channel_and_Alliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_and_Alliance_Type__c</fullName>
    <formula>Client_Contact__r.Channel_and_Alliance_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel and Alliance Type</label>
    <type>Text</type>
</CustomField>