LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contact Directory (Client)</relationshipLabel>
    <relationshipName>Client_Contact_Directory1</relationshipName>
    <type>Lookup</type>
</CustomField>