LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contact Directory</relationshipLabel>
    <relationshipName>Client_Contact_Directory</relationshipName>
    <type>Lookup</type>
</CustomField>