LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client_Contact_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Birthday__c</fullName>
    <label>Client Contact Birthday</label>
    <type>Date</type>
</CustomField>