LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Type__c</fullName>
    <formula>Client_Contact__r.Client_Contact_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contact Type</label>
    <type>Text</type>
</CustomField>