LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client_Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Corporate_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Corporate Address</label>
    <type>Checkbox</type>
</CustomField>