LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contact Directory</relationshipLabel>
    <relationshipName>Client_Contact_Directory</relationshipName>
    <type>Lookup</type>
</CustomField>