LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Contact Address</label>
    <type>Address</type>
</CustomField>