LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Co_CSL__c.field-meta.xml
<CustomField>
    <fullName>Co_CSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contact_Directory3</relationshipName>
    <type>Lookup</type>
</CustomField>