LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Committee_Names__c.field-meta.xml
<CustomField>
    <fullName>Committee_Names__c</fullName>
    <formula>Client_Contact__r.Committee_Names__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committee Names</label>
    <type>Text</type>
</CustomField>