LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Client Contact Directory</relationshipLabel>
    <relationshipName>Client_Contact_Directory</relationshipName>
    <type>Lookup</type>
</CustomField>