LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Consent_To_Receive_All_GT_Communication__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Receive_All_GT_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent To Receive All GT Communication</label>
    <type>Checkbox</type>
</CustomField>