LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Contact_Background__c.field-meta.xml
<CustomField>
    <fullName>Contact_Background__c</fullName>
    <label>Contact Background</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>