LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Contact_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Code__c</fullName>
    <displayFormat>Cont-{00000}</displayFormat>
    <label>Contact Code</label>
    <type>AutoNumber</type>
</CustomField>