LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Contact_Personal_Interest__c.field-meta.xml
<CustomField>
    <fullName>Contact_Personal_Interest__c</fullName>
    <formula>IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Wine connoisseur&quot; ), &quot;Wine connoisseur, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Art Lover&quot; ), &quot;Art Lover, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Golf Enthusiast&quot; ), &quot;Golf Enthusiast, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Movie Buff&quot; ), &quot;Movie Buff, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Travel Junkie&quot; ), &quot;Travel Junkie, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Tech Buff&quot; ), &quot;Tech Buff, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Cricket Enthusiast&quot; ), &quot;Cricket Enthusiast, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Sports follower&quot; ), &quot;Sports follower, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Fitness freak&quot; ), &quot;Fitness freak, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Adventure Sports Enthusiast&quot; ), &quot;Adventure Sports Enthusiast, &quot;,null ) &amp; 
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Avid Reader&quot; ), &quot;Avid Reader, &quot;,null ) &amp;
IF ( INCLUDES ( Client_Contact__r.Contact_Personal_Interest__c , &quot;Others&quot; ), &quot;Others, &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Personal Interest</label>
    <type>Text</type>
</CustomField>