LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Contact_status__c.field-meta.xml
<CustomField>
    <fullName>Contact_status__c</fullName>
    <formula>TEXT( Client_Contact__r.Contact_status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact status</label>
    <type>Text</type>
</CustomField>