LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Corridor__c.field-meta.xml
<CustomField>
    <fullName>Corridor__c</fullName>
    <label>Corridor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>