LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Country_HQ__c.field-meta.xml
<CustomField>
    <fullName>Country_HQ__c</fullName>
    <label>Country HQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>