LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Current_Directorship_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Directorship_Company_Name__c</fullName>
    <label>Current Directorship Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>