LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Custom_Link__c.field-meta.xml
<CustomField>
    <fullName>Custom_Link__c</fullName>
    <formula>Client_Contact__r.Custom_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Link</label>
    <type>Text</type>
</CustomField>