LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Customer_Experience_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Index__c</fullName>
    <label>Customer Experience Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>