LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Direct_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Line_Number__c</fullName>
    <label>Direct Line Number</label>
    <type>Phone</type>
</CustomField>