LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/DS_Team_Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_Approval_Rejection_Date__c</fullName>
    <label>DS Team Approval / Rejection Date</label>
    <type>Date</type>
</CustomField>