LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Google_Alert_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Alert_URL__c</fullName>
    <formula>Client_Contact__r.Google_Alert_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Alert URL</label>
    <type>Text</type>
</CustomField>