LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/GT_Alumni__c.field-meta.xml
<CustomField>
    <fullName>GT_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GT Alumni</label>
    <type>Checkbox</type>
</CustomField>