LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/GT_Client_Office__c.field-meta.xml
<CustomField>
    <fullName>GT_Client_Office__c</fullName>
    <formula>TEXT(Client_Contact__r.GT_Client_Office__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GT Client Office</label>
    <type>Text</type>
</CustomField>