LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/GT_Employee__c.field-meta.xml
<CustomField>
    <fullName>GT_Employee__c</fullName>
    <formula>Client_Contact__r.GT_Employee__r.FirstName  + &apos; &apos; + Client_Contact__r.GT_Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GT Employee</label>
    <type>Text</type>
</CustomField>