LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/GT_Member_Firms__c.field-meta.xml
<CustomField>
    <fullName>GT_Member_Firms__c</fullName>
    <formula>Client_Contact__r.GT_Member_Firms__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GT Member Firms</label>
    <type>Text</type>
</CustomField>