LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/GTI_Member_Firm_Office__c.field-meta.xml
<CustomField>
    <fullName>GTI_Member_Firm_Office__c</fullName>
    <label>GTI Member Firm Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>