LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/GTI_Member_Firm_Referring_Person_s_name__c.field-meta.xml
<CustomField>
    <fullName>GTI_Member_Firm_Referring_Person_s_name__c</fullName>
    <label>GTI Member Firm-Referring Person&apos;s name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>