LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Independent_Director_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Independent_Director_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Independent Director Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contact Directory (Independent Director Contact Name)</relationshipLabel>
    <relationshipName>Client_Contact_Directory2</relationshipName>
    <type>Lookup</type>
</CustomField>