LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Intermediary_Referral_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Referral_Person_Name__c</fullName>
    <label>Intermediary Referral Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>