LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Investors_Private_Equity_Firms__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms__c</fullName>
    <formula>Client_Contact__r.Investors_Private_Equity_Firms__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investors / Private Equity Firms</label>
    <type>Text</type>
</CustomField>