LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Investors_Private_Equity_Firms_Contact__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms_Contact__c</fullName>
    <formula>Client_Contact__r.Investors_Private_Equity_Firms_Contact__r.FirstName + &apos; &apos; + Client_Contact__r.Investors_Private_Equity_Firms_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investors / Private Equity Firms Contact</label>
    <type>Text</type>
</CustomField>