LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Is_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Is_Influencer__c</fullName>
    <formula>Client_Contact__r.Is_Influencer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Influencer</label>
    <type>Checkbox</type>
</CustomField>