LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Key_Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Industry__c</fullName>
    <formula>Client_Contact__r.Key_Account_Sub_Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Industry</label>
    <type>Text</type>
</CustomField>