LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Key_Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Segment__c</fullName>
    <label>Key Account Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>