LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Key_Contact_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Identifier__c</fullName>
    <label>Key Contact Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>BOD</fullName>
            </value>
            <value>
                <fullName>KMP</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>