LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Last_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_Time__c</fullName>
    <formula>Client_Contact__r.Last_Activity_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date Time</label>
    <type>DateTime</type>
</CustomField>