LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date__c</fullName>
    <label>Last Survey Date</label>
    <type>Date</type>
</CustomField>