LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <formula>Client_Contact__r.Law_Firm__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm</label>
    <type>Text</type>
</CustomField>