LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Law_Firm_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Contacts__c</fullName>
    <formula>Client_Contact__r.Law_Firm_Contacts__r.FirstName + &apos; &apos; + Client_Contact__r.Law_Firm_Contacts__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm Contacts</label>
    <type>Text</type>
</CustomField>