LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Linkedin_URL__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_URL__c</fullName>
    <formula>Client_Contact__r.Linkedin_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin URL</label>
    <type>Text</type>
</CustomField>