LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <label>Net Promoter Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>