LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <formula>Client_Contact__r.New_Client__r.FirstName + &apos; &apos; + Client_Contact__r.New_Client__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry</label>
    <type>Text</type>
</CustomField>