LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/New_Client_Channel__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Channel__c</fullName>
    <formula>TEXT(Client_Contact__r.Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Channel</label>
    <type>Text</type>
</CustomField>