LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/New_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Name__c</fullName>
    <formula>Client_Contact__r.New_Client_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Name</label>
    <type>Text</type>
</CustomField>