LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/New_Client_Source__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Source__c</fullName>
    <formula>TEXT(Client_Contact__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Source</label>
    <type>Text</type>
</CustomField>