LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/NSL__c.field-meta.xml
<CustomField>
    <fullName>NSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contact_Directory</relationshipName>
    <type>Lookup</type>
</CustomField>