LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Other_Committees__c.field-meta.xml
<CustomField>
    <fullName>Other_Committees__c</fullName>
    <formula>Client_Contact__r.Other_Committees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Committees</label>
    <type>Text</type>
</CustomField>