LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/Other_Passions__c.field-meta.xml
<CustomField>
    <fullName>Other_Passions__c</fullName>
    <formula>Client_Contact__r.Other_Passions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Passions</label>
    <type>Text</type>
</CustomField>