LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_comments__c.field-meta.xml
<CustomField>
    <fullName>pi_comments__c</fullName>
    <label>Account Engagement Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>