LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_conversion_date__c.field-meta.xml
<CustomField>
    <fullName>pi_conversion_date__c</fullName>
    <label>Account Engagement Conversion Date</label>
    <type>DateTime</type>
</CustomField>