LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_created_date__c.field-meta.xml
<CustomField>
    <fullName>pi_created_date__c</fullName>
    <label>Account Engagement Created Date</label>
    <type>DateTime</type>
</CustomField>