LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_grade__c.field-meta.xml
<CustomField>
    <fullName>pi_grade__c</fullName>
    <label>Account Engagement Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>