LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_last_activity__c.field-meta.xml
<CustomField>
    <fullName>pi_last_activity__c</fullName>
    <label>Account Engagement Last Activity</label>
    <type>DateTime</type>
</CustomField>