LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Directory__c/fields/pi_notes__c.field-meta.xml
<CustomField>
    <fullName>pi_notes__c</fullName>
    <label>Account Engagement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>